--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,21 +1,3 @@
 <h1>Edit article</h1>
 
-<% if @article.errors.any? %>
-  <h3>Please fix these errors:</h3>
-  <ul>
-    <% @article.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-  </ul>
-<% end %>
-
-<%= form_for @article do |f| %>
-  <%= f.label :title %>
-  <%= f.text_field :title %>
-  <%= f.label :link %>
-  <%= f.text_field :link %>
-  <%= f.label :user %>
-  <%= f.text_field :user %>
-  <%= f.hidden_field :points, :value => 100 %>
-  <%= f.submit %>
-<% end %>
+<%= render "form" %>
