--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,6 @@
 <h1><%= @article.title %></h1>
 
-<p><%= link_to "Return to articles", articles_path %></p>
+<p><%= link_to "Edit", edit_article_path(@article) %></p>
+<p><%= link_to "Delete", article_path(@article),
+                          :data => {:confirm => "Are you sure?",
+                                    :method => "delete"} %></p>
