--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,7 +2,15 @@
 
 <ul>
   <% @articles.each do |article| %>
-    <li><%= link_to article.title, article_path(article) %></li>
+    <li>
+      <%= link_to article.title, article_path(article) %> |
+      <%= article.points %> points
+    </li>
+
+    <%= form_for [article] do |f| %>
+      <%= f.hidden_field(:points, :value => (article.points + 10)) %>
+      <p><%= f.submit 'Vote' %></p>
+    <% end %>
   <% end %>
 </ul>
 
